syntax = "proto3";

package CDEService;

import   "google/api/annotations.proto";
import   "github.com/transavro/ScheduleService/proto/SchedularService.proto";


service CDEService {
    rpc SearchStream(SearchQuery) returns(stream SchedularService.Content) {
        option (google.api.http) = {
                post:"/searchStream"
                body: "*"
        };
    }

    rpc Search(SearchQuery) returns(SearchResponse) {
        option (google.api.http) = {
                post:"/search"
                body: "*"
        };
    }
}

message SearchQuery{
    string query = 1;
}

message SearchResponse{
    repeated SchedularService.Content contentTile = 1;
}